--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "integration-forms",
   "version": "1.0.0",
   "description": "",
-  "main": "form.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
