--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "routes": [
     {
-      "src": "/proxy",
-      "dest": "/api/proxy.js"
+      "src": "/api/proxy",
+      "dest": "/api/index.js"
     }
   ]
 }
